--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <label for="">Descreva um pouco da sua empresa, e tambem o problema que esta procurando solucionar</label>
   <textarea id="" cols="30" rows="10"></textarea>
 </div>
+<button type="submit">Enviar</button>
 
 </form>
 </section>
