--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 
   <link rel="stylesheet" href="style.css">
+
+  <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -142,6 +144,8 @@
     </div>
 
   </footer>
+
+
 
 </body>
 
