--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="script.js" defer></script>
 </head>
 
-<body>
+<body onload="carregarCases()">
   <div class="banner">
     <header>
       <div class="container-grid">
@@ -30,33 +30,60 @@
           <a href="#contato">Contate-nos</a>
         </nav>
         <button onclick="abreFechaMenu()">
-          <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
-          <svg id="icone-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+          <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+          </svg>
+          <svg id="icone-x" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+          </svg>
         </button>
       </div>
     </header>
-
+    <!-- 
+            PascalCase  -> ConteudoBanner   -> Java, C#
+            camelCase   -> conteudoBanner   -> Javascript
+            snake_case  -> conteudo_banner  -> Python (HTML e CSS)
+            ?           -> conteudo-banner  -> HTML e CSS
+         -->
     <div class="container-grid conteudo-banner">
-      <p>GamificaAi: <span>Inovação através da diversão!</span></p>
-      <button id="botao-voltar"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"/></svg></button>
-      <button id="botao-proximo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"/></svg></button>
-      <button onclick="mostrarSlideAnterior()" id="botao-voltar"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"/></svg></button>
+      <p>GamificaAi: <span>Inovação através da Diversão!</span></p>
+            <button onclick="mostrarSlideAnterior()" id="botao-voltar"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"/></svg></button>
             <button onclick="mostrarProximoSlide()" id="botao-proximo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"/></svg></button>
+
+            <div class="botoes">
+                <button onclick="selecionarSlide(0)"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/></svg></button>
+                <button onclick="selecionarSlide(1)"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/></svg></button>
+                <button onclick="selecionarSlide(2)"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/></svg></button>
+            </div>
 
     </div>
   </div>
   <section id="sobre">
     <h2>Sobre nossa empresa</h2>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <p>Mussum Ipsum, cacilds vidis litro abertis. </p>
-    <p>A ordem dos tratores não altera o pão duris</p>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+      scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+      electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+      Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+      Aldus PageMaker including versions of Lorem Ipsum.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia necessitatibus iure maiores, porro sapiente
+      corporis nobis illo ratione enim! At repudiandae cupiditate odio dicta harum, doloribus eius aliquam sed ab?
+  </p>
+  <p>Silvio Santos Ipsum Eu só acreditoammmm.... Vendoammmm. Eu não queria perguntar isso publicamente, ma vou
+      perguntar. Carla, você tem o ensino fundamentauam? O Raul Gil é gayam! ... Maa O Ah Ae! Ih Ih! O Raul Gil é
+      gayamm! Você veio da caravana de ondeammm? O prêmio é em barras de ouro, que vale mais que dinheiroam. É com
+      você Lombardiam. É dinheiro ou não éam?</p>
   </section>
 
   <section class="container-grid" id="cases">
     <h2>Cases de sucesso</h2>
     <div class="container-cards">
 
-      </div>
+    </div>
 
   </section>
 
@@ -66,7 +93,7 @@
       <a href="#">Conheça nosso Portifólio Gamificado</a>
     </div>
   </section>
-  
+
   <section id="contato">
     <h2>Contate-nos</h2>
 
@@ -97,7 +124,7 @@
       <div class="redes-sociais">
         <p>Estamos também nas redes sociais</p>
         <div class="icones-redes">
-          <a href="">
+          <a href="#">
             <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M24.9999 38.6364C32.531 38.6364 38.6363 32.5311 38.6363 25C38.6363 17.4689 32.531 11.3636 24.9999 11.3636C17.4687 11.3636 11.3635 17.4689 11.3635 25C11.3635 32.5311 17.4687 38.6364 24.9999 38.6364ZM24.9999 34.0909C30.0206 34.0909 34.0908 30.0207 34.0908 25C34.0908 19.9792 30.0206 15.9091 24.9999 15.9091C19.9791 15.9091 15.909 19.9792 15.909 25C15.909 30.0207 19.9791 34.0909 24.9999 34.0909Z"
